Set minimum width for optimize palette progress message to avoid controls moving around on mobile

--- a/sass/_controls.scss
+++ b/sass/_controls.scss
@@ -101,6 +101,8 @@ input[type="color"]{
 .optimize-palette-pending{
     color: var(--hint-text-color);
     font-size: 14px;
+    min-width: 8em;
+    max-width: 100%;
 }
 
 /*
